Änderungen zu KMeans

--- a/partitionierende_clusteranalyse_sample_size_1000.ipynb
+++ b/partitionierende_clusteranalyse_sample_size_1000.ipynb
@@ -200,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1f9d6311280>"
+       "<seaborn.axisgrid.PairGrid at 0x1c9b96c3100>"
       ]
      },
      "execution_count": 3,
@@ -308,7 +308,7 @@
    "source": [
     "<h2> Partionierendes Clustern </h2>\n",
     "\n",
-    "Ablauf einer partitionierenden Clusteranalyse:"
+    "Ablauf einer partitionierenden Clusteranalyse mit dem KMeans Algorithmus:"
    ]
   },
   {
@@ -317,22 +317,26 @@
    "source": [
     "<ol>\n",
     "    <li>\n",
-    "        Zuerst werden 4 beliebige Werte/Datensätze ausgewählt, denen die Datensätze nach Nähe zugeordnet werden. \n",
+    "Anzahl von $k$ Cluster angeben\n",
     "    </li>\n",
     "    <li>\n",
-    "Infolgedessen werden die Zentroide neu berechnet.\n",
+    "Die $k$ Zentroide zufällig initialisieren\n",
     "    </li>\n",
     "    <li>\n",
-    "Je nach Distanz werden die Datensätze neu zugeordnet.\n",
+    "Jeden Datensatz dem am nächsten liegenden Zentroiden zuordnen\n",
     "    </li>\n",
     "    <li>\n",
-    "Dieser Vorgang wiederholt sich so lange, bis das Endkriterium erfüllt ist. </li>\n",
+    "Die neuen Zentroiden für jeden Cluster berechnen\n",
+    "    </li>\n",
+    "    <li>\n",
+    "Schritte 3 & 4 so lange wiederholen, bis sich die Position der Zentroiden nicht mehr ändert </li>\n",
     "</ol>  \n",
     "\n",
-    "In Python lässt sich die partitionierende Clusteranalyse mit der Methode KMeans umsetzen. Der Methode werden hier zwei Parameter übergeben: Die Anzahl der Cluster und ein Integer für random_state damit bei wiederholtem Methodenaufruf dieselben Zentroide gewählt werden. Mit dem Methodenaufruf fit() wird das Data Set, welches geclustert werden soll, als Parameter übergeben. <br/>\n",
+    "In Python lässt sich die partitionierende Clusteranalyse mit der Klasse \"KMeans\" umsetzen. Dem Konstruktor werden hier zwei Werte übergeben: Die Anzahl der Cluster und ein Integer für random_state damit bei wiederholtem Methodenaufruf dieselben Zentroide gewählt werden. Mit dem Methodenaufruf fit() wird das Data Set, welches geclustert werden soll, als Parameter übergeben. <br/>\n",
     "Die Variable \"kmeans\" stellt das Modell dar, welches durch das Data Set trainiert werden soll.\n",
     "Mit kmeans.predict() kann dann das trainierte Model an einem Datenbestand angewendet werden. <br>\n",
-    "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html\"><I>->Zur Dokumentation von KMeans<I></a><br>\n"
+    "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html\"><I>->Zur Dokumentation von KMeans<I></a><br>\n",
+    "\n"
    ]
   },
   {
@@ -345,7 +349,9 @@
     "\n",
     "kmeans = KMeans(n_clusters=4, random_state=0).fit(X)\n",
     "\n",
-    "y_kmeans=kmeans.predict(X)\n"
+    "y_kmeans=kmeans.predict(X)\n",
+    "\n",
+    "#oder in kurz: y_kmeans = KMeans(n_clusters=4, random_state=0).fit_predict(X)"
    ]
   },
   {
@@ -354,7 +360,7 @@
    "source": [
     "<h3>Angleichen der Bezeichnungen von Zielklassen und durch KMeans gebildeten Clustern</h3>\n",
     "Da KMeans nicht die Bezeichnungen der Zielklassen kennt, stimmen die Bezeichnungen der Cluster eventuell nicht mit denen der Zielklassen überein. Zur Verdeutlichung: Es ist nicht zwangsläufig der Fall, dass KMeans unter dem Cluster \"0\" dieselben Werte subsumiert, wie es die make_blobs Methode bei der Zielkasse \"0\" tat. Auf das Beispiel bezogen könnte es somit sein, dass KMeans unter dem Cluster \"0\" Datensätze mit einer sehr schlechten Bonität einordnet, unsere Zielklasse dort im Gegensatz dazu aber eine sehr gute Bonität. Um Zielklassen und durch KMeans gebildete Cluster miteinander vergleichen zu können, werden in dem folgenden Schritt die Bezeichnungen der gebildeten Cluster and die Bezeichnungen der Zielklassen angeglichen:\n",
-    "<I>Quelle: <a href=\"https://jakevdp.github.io/PythonDataScienceHandbook/05.11-k-means.html\">https://jakevdp.github.io/PythonDataScienceHandbook/05.11-k-means.html</a> [Stand: 05.06.2021]</I>"
+    "<I>Quelle: <a href=\"https://jakevdp.github.io/PythonDataScienceHandbook/05.11-k-means.html\">https://jakevdp.github.io/PythonDataScienceHandbook/05.11-k-means.html</a> [Stand: 05.06.2021]</I>\n"
    ]
   },
   {
@@ -496,9 +502,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zuerst wird mit dem Methodenaufruf numpy.zeros_like(y_kmeans) ein ndArray gebildet, welches dieselben Maße wie das übergebene Array hat. Befüllt ist jenes Array zum Zeitpunkt der Initialisierung ausschließlich mit Nullen. Am Ende wird das ndArray die Werte der Zielklassen beinhalten, allerdings an die Bezeichnungen der Cluster angeglichen.<br>\n",
+    "Zuerst wird mit dem Methodenaufruf numpy.zeros_like(y_kmeans) ein ndArray gebildet, welches dieselben Maße wie das übergebene Array hat. Befüllt ist jenes Array zum Zeitpunkt der Initialisierung ausschließlich mit Nullen. Am Ende wird das ndArray die durch KMeans erfolgte Zuordnung der Datensätze zu den Clustern beinhalten, allerdings an die Bezeichnungen der Zielklassen angeglichen.<br>\n",
     "Dafür durchläuft eine Zählvariable zunächst die Zahlen 0 bis 3 (unsere Zielklassen) in einer Schleife. In der Variablen \"mask\" wird ein Array mit boolschen Werten gespeichert. Durch den Ausdruck \"(y_kmeans == i)\" sind die Werte des Arrays an den Stellen \"true\", an denen die Stellen des ndArray \"y_kmeans\" mit dem Wert der Zählvariable übereinstimmen. Im ersten Durchlauf der Schleife hätte das Array \"mask\" somit nur an den Stellen den Wert \"true\", an denen ein Datensatz durch KMeans in den Cluster \"0\" eingeordnet wurde. <br>\n",
-    "Im zweiten Schritt werden nun die Nullen im ndArray \"labels\" mit den Werten der jeweiligen (an die Bezeichnung der durch KMeans gebildeten Cluster angeglichenen) Zielklasse überschrieben. Zuerst mit der Zielklasse 0, dann mit der Zielklasse 1 usw. Möglich ist dies, da wir einem ndArray als Index ein boolsches Array mitgeben können. Indiziert werden in dem Array somit jene Werten an den Stellen, an denen das als Index übergebene Array den Wert \"true\" zurück gibt.<br>\n",
+    "Im zweiten Schritt werden nun die Nullen im ndArray \"labels\" mit den Werten der jeweiligen (an die Bezeichnung der durch KMeans gebildeten Cluster angeglichenen) Zielklasse überschrieben. Zuerst das mit \"0\" bezeichneten Cluster, dann das mit \"1\" bezeichneten Cluster, usw. Möglich ist dies, da wir einem ndArray als Index ein boolsches Array mitgeben können. Indiziert werden in dem Array somit jene Werten an den Stellen, an denen das als Index übergebene Array den Wert \"true\" zurück gibt.<br>\n",
     "Die Anpassung der Bezeichnung erfolgt mit der der scipy.stats.mode Methode. Diese Methode liefert ein Array mit dem Modus des übergebenen Arrays zurück. Als Parameter übergeben wir hier das ndArray \"y\", welches die Zielklassen beinhaltet. Als Index übergeben wir auch hier dasselbe boolsche Array wie bei dem ndArray \"labels\". Somit wird in dem ndArray \"y\" der häufigste Wert an den Stellen gesucht, an denen KMeans die jeweilige Clusterbezeichnung der Zählvariable zugeteilt hat. Da die Abweichungen von Zielklassen und gebildeten Cluster gewöhnlich den Modus nicht verfälschen dürfte, kann so zuverlässig die eigentliche Bezeichnung des gebildeten Clusters herausgefunden werden. <br>\n",
     "Da wir als Paramter ein eindimensionales Array übergeben, beinhaltet das Rückgabearray nur einen Wert. Auf jenen können wir somit direkt mit dem Index \"0\" zugreifen. (Bei einem zweidimensionalen Array hätte das Rückgabearray eine Länge von 2, usw.) Dieser Wert wird nun an den Stellen eingesetzt, an welchen y_kmeans eine Clustergruppe verordnet hat. Somit wurde die Bezeichnung der von KMeans gebildeten Cluster an die Bezeichnung der Zielklassen angeglichen, ohne das Ergebnis zu verfälschen."
    ]
