Änderungen von Ulrike

--- a/partitionierende_clusteranalyse_sample_size_1000.ipynb
+++ b/partitionierende_clusteranalyse_sample_size_1000.ipynb
@@ -200,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1c9b96c3100>"
+       "<seaborn.axisgrid.PairGrid at 0x2e1cb8be0a0>"
       ]
      },
      "execution_count": 3,
@@ -366,7 +366,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -579,7 +581,8 @@
     "    <li>$Prävalenz=\\frac{FN+TP}{n}$</li>\n",
     "</ul>\n",
     "Bei größeren Matrizen werden zur Berechnung der Genauigkeit alle Werte in der Diagonalen miteinander addiert und durch die gesamte Anzahl geteilt. Insgesamt ist die Konfusionsmatrix genauer als die Güte.<br/>\n",
-    "In unserem Fall handelt es sich um eine 4x4 Matrix, da wir die 4 Cluster der Bonitätsklassen einander gegenüberstellen. Im Folgenden wird diese mithilfe von Python mit der Methode confusion_matrix dargestellt. Der Methode wurden als Parameter die tatsächlichen Zielklassen und die durch die KMeans gebildeten Cluster übergeben. Zum besseren Verständnis wurde die Konfusionsmatrix einem DataFrame-Objekt inklusive Achsenbeschriftungen übergeben. <br>\n",
+    "In unserem Fall handelt es sich um eine 4x4 Matrix, da wir die 4 Cluster der Bonitätsklassen einander gegenüberstellen. <br>\n",
+    "Im Folgenden wird diese mithilfe von Python mit der Methode confusion_matrix dargestellt. Der Methode wurden als Parameter die tatsächlichen Zielklassen und die durch die KMeans gebildeten Cluster übergeben. Zum besseren Verständnis wurde die Konfusionsmatrix einem DataFrame-Objekt inklusive Achsenbeschriftungen übergeben. <br>\n",
     "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html\"><I>->Zur Dokumentation von confusion_matrix<I></a><br>"
    ]
   },
@@ -682,7 +685,13 @@
     "    <li>0 Objekte in Cluster 3 eingeordnet</li>\n",
     "</ul>\n",
     "\n",
-    "Folglich wurden insgesamt 47 Kunden in falsche und 953 in die richtigen Bonitätsklassen eingeordnet. Dies führt zur Accuracy von 95,3%.\n",
+    "Weitere daraus mögliche Berechnungen:\n",
+    "<ul>\n",
+    "<li>$Genauigkeit=\\frac{TP+TN}{n}=\\frac{953}{1000}$=95,3%</li>\n",
+    "<li>$Fehlerrate=\\frac{FP+FN}{n}=\\frac{47}{1000}$=4,7%</li>\n",
+    "</ul>\n",
+    "\n",
+    "Folglich wurden insgesamt 47 Kunden in falsche und 953 in die richtigen Bonitätsklassen eingeordnet. Dies führt zur Accuracy von 95,3% und einer Fehlerrate 0,047 also 4,7%.\n",
     "\n",
     "Quellen zur Güte, Konfusionsmatrix und Heatmap: <br/>\n",
     "<I><a href=\"https://scikit-learn.org/stable/modules/model_evaluation.html#accuracy-score\">https://scikit-learn.org/stable/modules/model_evaluation.html#accuracy-score</a> [Stand: 27.05.2021]</I><br/>\n",
