Partionierendes Cluster Anordnung

--- a/partitionierende_clusteranalyse_sample_size_1000.ipynb
+++ b/partitionierende_clusteranalyse_sample_size_1000.ipynb
@@ -308,25 +308,19 @@
    "source": [
     "<h2> Partionierendes Clustern </h2>\n",
     "\n",
-    "Ablauf einer partitionierenden Clusteranalyse mit dem KMeans Algorithmus:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Ablauf einer partitionierenden Clusteranalyse mit dem KMeans Algorithmus:\n",
     "<ol>\n",
     "    <li>\n",
-    "Anzahl von $k$ Cluster angeben\n",
+    "Anzahl von k Clustern angeben\n",
     "    </li>\n",
     "    <li>\n",
-    "Die $k$ Zentroide zufällig initialisieren\n",
+    "k Zentroide zufällig initialisieren\n",
     "    </li>\n",
     "    <li>\n",
     "Jeden Datensatz dem am nächsten liegenden Zentroiden zuordnen\n",
     "    </li>\n",
     "    <li>\n",
-    "Die neuen Zentroiden für jeden Cluster berechnen\n",
+    "Die neuen Zentroide für jedes Cluster berechnen\n",
     "    </li>\n",
     "    <li>\n",
     "Schritte 3 & 4 so lange wiederholen, bis sich die Position der Zentroiden nicht mehr ändert </li>\n",
