--- a/partitionierende_clusteranalyse_sample_size_1000.ipynb
+++ b/partitionierende_clusteranalyse_sample_size_1000.ipynb
@@ -200,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2e1cb8be0a0>"
+       "<seaborn.axisgrid.PairGrid at 0x2ac5013e100>"
       ]
      },
      "execution_count": 3,
@@ -311,24 +311,24 @@
     "Ablauf einer partitionierenden Clusteranalyse mit dem KMeans Algorithmus:\n",
     "<ol>\n",
     "    <li>\n",
-    "Anzahl von k Clustern angeben\n",
+    "Angabe der Anzahl k an Clustern\n",
     "    </li>\n",
     "    <li>\n",
-    "k Zentroide zufällig initialisieren\n",
+    "Zufällige Initialisierung der k Zentroide\n",
     "    </li>\n",
     "    <li>\n",
-    "Jeden Datensatz dem am nächsten liegenden Zentroiden zuordnen\n",
+    "Zuordnung jeden Datensatzes zum nächstgelegenen Zentroid\n",
     "    </li>\n",
     "    <li>\n",
-    "Die neuen Zentroide für jedes Cluster berechnen\n",
+    "Berechnung der neuen Zentroide für jedes Cluster\n",
     "    </li>\n",
     "    <li>\n",
-    "Schritte 3 & 4 so lange wiederholen, bis sich die Position der Zentroiden nicht mehr ändert </li>\n",
+    "Wiederholung der Schritte 3 & 4, bis sich die Position der Zentroide nicht mehr ändert </li>\n",
     "</ol>  \n",
     "\n",
     "In Python lässt sich die partitionierende Clusteranalyse mit der Klasse \"KMeans\" umsetzen. Dem Konstruktor werden hier zwei Werte übergeben: Die Anzahl der Cluster und ein Integer für random_state damit bei wiederholtem Methodenaufruf dieselben Zentroide gewählt werden. Mit dem Methodenaufruf fit() wird das Data Set, welches geclustert werden soll, als Parameter übergeben. <br/>\n",
     "Die Variable \"kmeans\" stellt das Modell dar, welches durch das Data Set trainiert werden soll.\n",
-    "Mit kmeans.predict() kann dann das trainierte Model an einem Datenbestand angewendet werden. <br>\n",
+    "Mit kmeans.predict() kann dann das trainierte Modell an einem Datenbestand angewendet werden. <br>\n",
     "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html\"><I>->Zur Dokumentation von KMeans<I></a><br>\n",
     "\n"
    ]
@@ -352,8 +352,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Angleichen der Bezeichnungen von Zielklassen und durch KMeans gebildeten Clustern</h3>\n",
-    "Da KMeans nicht die Bezeichnungen der Zielklassen kennt, stimmen die Bezeichnungen der Cluster eventuell nicht mit denen der Zielklassen überein. Zur Verdeutlichung: Es ist nicht zwangsläufig der Fall, dass KMeans unter dem Cluster \"0\" dieselben Werte subsumiert, wie es die make_blobs Methode bei der Zielkasse \"0\" tat. Auf das Beispiel bezogen könnte es somit sein, dass KMeans unter dem Cluster \"0\" Datensätze mit einer sehr schlechten Bonität einordnet, unsere Zielklasse dort im Gegensatz dazu aber eine sehr gute Bonität. Um Zielklassen und durch KMeans gebildete Cluster miteinander vergleichen zu können, werden in dem folgenden Schritt die Bezeichnungen der gebildeten Cluster and die Bezeichnungen der Zielklassen angeglichen:\n",
+    "<h3>Angleichen der Bezeichnungen von Zielklassen und durch KMeans gebildeten Clustern</h3><br/>\n",
+    "Da KMeans nicht die Bezeichnungen der Zielklassen kennt, stimmen die Bezeichnungen der Cluster eventuell nicht mit denen der Zielklassen überein. Zur Verdeutlichung: Es ist nicht zwangsläufig der Fall, dass KMeans unter dem Cluster \"0\" dieselben Werte subsumiert, wie es die make_blobs Methode bei der Zielkasse \"0\" tat. Auf das Beispiel bezogen könnte es somit sein, dass KMeans unter dem Cluster \"0\" Datensätze mit einer sehr schlechten Bonität einordnet, unsere Zielklasse dort im Gegensatz dazu aber eine sehr gute Bonität aufweist. Um Zielklassen und durch KMeans gebildete Cluster miteinander vergleichen zu können, werden in dem folgenden Schritt die Bezeichnungen der gebildeten Cluster and die Bezeichnungen der Zielklassen angeglichen:\n",
     "<I>Quelle: <a href=\"https://jakevdp.github.io/PythonDataScienceHandbook/05.11-k-means.html\">https://jakevdp.github.io/PythonDataScienceHandbook/05.11-k-means.html</a> [Stand: 05.06.2021]</I>\n"
    ]
   },
@@ -499,16 +499,10 @@
    "metadata": {},
    "source": [
     "Zuerst wird mit dem Methodenaufruf numpy.zeros_like(y_kmeans) ein ndArray gebildet, welches dieselben Maße wie das übergebene Array hat. Befüllt ist jenes Array zum Zeitpunkt der Initialisierung ausschließlich mit Nullen. Am Ende wird das ndArray die durch KMeans erfolgte Zuordnung der Datensätze zu den Clustern beinhalten, allerdings an die Bezeichnungen der Zielklassen angeglichen.<br>\n",
-    "Dafür durchläuft eine Zählvariable zunächst die Zahlen 0 bis 3 (unsere Zielklassen) in einer Schleife. In der Variablen \"mask\" wird ein Array mit boolschen Werten gespeichert. Durch den Ausdruck \"(y_kmeans == i)\" sind die Werte des Arrays an den Stellen \"true\", an denen die Stellen des ndArray \"y_kmeans\" mit dem Wert der Zählvariable übereinstimmen. Im ersten Durchlauf der Schleife hätte das Array \"mask\" somit nur an den Stellen den Wert \"true\", an denen ein Datensatz durch KMeans in den Cluster \"0\" eingeordnet wurde. <br>\n",
-    "Im zweiten Schritt werden nun die Nullen im ndArray \"labels\" mit den Werten der jeweiligen (an die Bezeichnung der durch KMeans gebildeten Cluster angeglichenen) Zielklasse überschrieben. Zuerst das mit \"0\" bezeichneten Cluster, dann das mit \"1\" bezeichneten Cluster, usw. Möglich ist dies, da wir einem ndArray als Index ein boolsches Array mitgeben können. Indiziert werden in dem Array somit jene Werten an den Stellen, an denen das als Index übergebene Array den Wert \"true\" zurück gibt.<br>\n",
-    "Die Anpassung der Bezeichnung erfolgt mit der der scipy.stats.mode Methode. Diese Methode liefert ein Array mit dem Modus des übergebenen Arrays zurück. Als Parameter übergeben wir hier das ndArray \"y\", welches die Zielklassen beinhaltet. Als Index übergeben wir auch hier dasselbe boolsche Array wie bei dem ndArray \"labels\". Somit wird in dem ndArray \"y\" der häufigste Wert an den Stellen gesucht, an denen KMeans die jeweilige Clusterbezeichnung der Zählvariable zugeteilt hat. Da die Abweichungen von Zielklassen und gebildeten Cluster gewöhnlich den Modus nicht verfälschen dürfte, kann so zuverlässig die eigentliche Bezeichnung des gebildeten Clusters herausgefunden werden. <br>\n",
-    "Da wir als Paramter ein eindimensionales Array übergeben, beinhaltet das Rückgabearray nur einen Wert. Auf jenen können wir somit direkt mit dem Index \"0\" zugreifen. (Bei einem zweidimensionalen Array hätte das Rückgabearray eine Länge von 2, usw.) Dieser Wert wird nun an den Stellen eingesetzt, an welchen y_kmeans eine Clustergruppe verordnet hat. Somit wurde die Bezeichnung der von KMeans gebildeten Cluster an die Bezeichnung der Zielklassen angeglichen, ohne das Ergebnis zu verfälschen."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Dafür durchläuft eine Zählvariable zunächst die Zahlen 0 bis 3 (unsere Zielklassen) in einer Schleife. In der Variablen \"mask\" wird ein Array mit boolschen Werten gespeichert. Durch den Ausdruck \"(y_kmeans == i)\" sind die Werte des Arrays an den Stellen \"true\", an denen die Stellen des ndArray \"y_kmeans\" mit dem Wert der Zählvariable übereinstimmen. Im ersten Durchlauf der Schleife hätte das Array \"mask\" somit nur an den Stellen den Wert \"true\", an denen ein Datensatz durch KMeans in dem Cluster \"0\" eingeordnet wurde. <br>\n",
+    "Im zweiten Schritt werden nun die Nullen im ndArray \"labels\" mit den Werten der jeweiligen (an die Bezeichnung der durch KMeans gebildeten Cluster angeglichenen) Zielklasse überschrieben. Zuerst das mit \"0\" bezeichnete Cluster, dann das mit \"1\" bezeichnete Cluster, usw. Möglich ist dies, da wir einem ndArray als Index ein boolsches Array mitgeben können. Indiziert werden in dem Array somit jene Werte an den Stellen, an denen das als Index übergebene Array den Wert \"true\" zurückgibt.<br>\n",
+    "Die Anpassung der Bezeichnung erfolgt mit der scipy.stats.mode Methode. Diese Methode liefert ein Array mit dem Modus des übergebenen Arrays zurück. Als Parameter übergeben wir hier das ndArray \"y\", welches die Zielklassen beinhaltet. Als Index übergeben wir auch hier dasselbe boolsche Array wie bei dem ndArray \"labels\". Somit wird in dem ndArray \"y\" der häufigste Wert an den Stellen gesucht, an denen KMeans die jeweilige Clusterbezeichnung der Zählvariable zugeteilt hat. Da die Abweichungen von Zielklassen und gebildeten Clustern gewöhnlich den Modus nicht verfälschen dürften, kann so zuverlässig die eigentliche Bezeichnung des gebildeten Clusters herausgefunden werden. <br>\n",
+    "Da wir als Parameter ein eindimensionales Array übergeben, beinhaltet das Rückgabearray nur einen Wert. Auf jenen können wir somit direkt mit dem Index \"0\" zugreifen. (Bei einem zweidimensionalen Array hätte das Rückgabearray eine Länge von 2, usw.) Dieser Wert wird nun an den Stellen eingesetzt, an welchen y_kmeans ein Cluster verortet hat. Somit wurde die Bezeichnung der von KMeans gebildeten Cluster an die Bezeichnung der Zielklassen angeglichen, ohne das Ergebnis zu verfälschen.\n",
     "<h3>Güte</h3>\n",
     "\n",
     "In Python lässt sich die Güte mithilfe der Methode accuracy_score berechnen. Als Parameter wurden der Methode die tatsächlichen Zielklassen und die durch KMeans gebildeten Cluster übergeben\n",
@@ -555,15 +549,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Konfusionsmatrix</h2>\n",
+    "<h2>Konfusionsmatrix</h2><br/>\n",
     "Die Konfusionsmatrix wird nur benutzt, um zu klassifizieren. Sie sagt keine numerischen Werte voraus. \n",
     "\n",
-    "<h3>Beispiel:</h3>\n",
     "Im Fall einer 2x2 Matrix könnte sich ein solches Szenario abspielen: \n",
     "\n",
     "In der Beispiel-Matrix sind insgesamt 165 einsortierte Fälle zu sehen. Angenommen es handelt sich um eine Angabe der Genauigkeit eines Testes, ob ein Mensch erkrankt ist oder nicht. In diesem Fall würde Ja für positiv getestet und Nein für negativ getestet stehen. Damit würde der Test 110 Fälle als negativ einstufen, obwohl nur 105 wirklich nicht erkrankt sind. Von den 60 Erkrankten würden folglich nur 55 positiv getestet.<br/>\n",
     "![grafik-3.png](attachment:grafik-3.png)<br/>\n",
-    "Daraus ergeben sich 100 die in Wirklichkeit und vom Test als negativ eingestuft wurden, diese werden true negatives genannt. Die 50, die richtig als positiv einsortiert wurden, werden true postives genannt. Die 5 falsch positiv getesteten werden false positives genannt oder auch Type 1 Error und die 10 die noch übrig bleiben false negatives oder Type 2 Error. Die true negatives und positives sollen maximiert und die false negatives und positives minimiert werden. Je nach Anwendungsbereich ist es wichtiger einen der beiden false Werte kleiner zu bekommen als den anderen. So ist es zum Beispiel schlimmer falsch negativ auf eine Krankheit getestet zu werden, gegen die es eine Behandlung gibt, als falsch positiv.<br/>\n",
+    "Daraus ergeben sich 100 die in Wirklichkeit und vom Test als negativ eingestuft wurden, diese werden true negatives genannt. Die 50, die richtig als positiv einsortiert wurden, werden true postives genannt. Die 5 falsch positiv getesteten werden false positives genannt oder auch Type 1 Error und die 10 die noch übrig bleiben false negatives oder Type 2 Error. Die true negatives und positives sollen maximiert und die false negatives und positives minimiert werden. Je nach Anwendungsbereich ist es wichtiger einen der beiden false Werte kleiner zu bekommen als den anderen. So ist es zum Beispiel schlimmer, falsch negativ auf eine Krankheit getestet zu werden, gegen die es eine Behandlung gibt, als falsch positiv.<br/>\n",
     "![grafik-4.png](attachment:grafik-4.png)<br/>\n",
     "Aus diesen Matrizen lassen sich folgende Werte ableiten:\n",
     "<ul>\n",
@@ -613,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zur Veranschaulichung kann eine confusion_matrix in eine Heatmap überführt werden. Der Begriff der Heatmap resultiert aus den verwendeten Farben, die jene einer Wärmebildkamera entsprechen. Je kräftiger das Rot, desto höher der Wert. Der Vorteil einer Heatmap ist die bessere Darstellung von Zwischenstufen.\n",
+    "Zur Veranschaulichung kann eine confusion_matrix in eine Heatmap überführt werden. Der Begriff der Heatmap resultiert aus den verwendeten Farben, die denen einer Wärmebildkamera entsprechen. Je kräftiger das Rot, desto höher der Wert. Der Vorteil einer Heatmap ist die bessere Darstellung von Zwischenstufen.\n",
     "In Python lässt sich die Heatmap mit der Methode heatmap darstellen. Als Parameter wurden der Methode die Konfusionsmatrix in Form eines DataFrames inklusive Achsenbeschriftungen, die Färbung der Heatmap, die Stärke der Trennlinien der Zellen, sowie zwei weitere zur Beschreibung der Zellen übergeben. <br>\n",
     "<a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html\"><I>->Zur Dokumentation von heatmap<I></a><br>"
    ]
@@ -661,7 +654,7 @@
     "\n",
     "In der Diagonalen werden die korrekt zugeordneten Datensätze dargestellt. Bei einer Güte von 100% würde die Diagonale den dunkelsten möglichen Rotton (Skala: 250) annehmen. Dies ist in der Bonitätsklasse 3 der Fall. Daraus folgt, dass in der Bonitätsklasse 3 alle anderen Felder weiß (Skala: 0) sind. \n",
     "\n",
-    "In der tatsächlichen Bonitätsklasse 0 liegt keine vollständige Übereinstimmung vor. Das bedeutet, dass der Rotton bei Actual 0 und Predicted 0 etwas heller ist. Durch das kMeans-Verfahren wurden 7 Objekte der Bonitätsklasse 0 der Bonitätsklasse 1 sowie 5 der Bonitätsklasse 2 zugeordnet. Diese Felder sind nun etwas dunkler als bei 0 fehlerhaft eingeordneten Objekten. Diese Interpretation gilt für die weiteren Zeilen simultan: \n",
+    "In der tatsächlichen Bonitätsklasse 0 liegt keine vollständige Übereinstimmung vor. Das bedeutet, dass der Rotton bei Actual 0 und Predicted 0 etwas heller ist. Durch das kMeans-Verfahren wurden 238 Objekte richtig in die Bonitätsklasse 0 einsortiert. 7 Objekte wurden fälschlicherweise der Bonitätsklasse 1 sowie 5 der Bonitätsklasse 2 zugeordnet. Diese Felder sind nun etwas dunkler als bei 0 fehlerhaft eingeordneten Objekten. Diese Interpretation gilt für die weiteren Zeilen simultan: \n",
     "\n",
     "Tatsächliche Bonitätsklasse 1:\n",
     "<ul>\n",
@@ -687,7 +680,7 @@
     "\n",
     "Folglich wurden insgesamt 47 Kunden in falsche und 953 in die richtigen Bonitätsklassen eingeordnet. Dies führt zur Accuracy von 95,3% und einer Fehlerrate 0,047 also 4,7%.\n",
     "\n",
-    "Quellen zur Güte, Konfusionsmatrix und Heatmap: <br/>\n",
+    "<h3>Quellen zur Güte, Konfusionsmatrix und Heatmap:</h3><br/> \n",
     "<I><a href=\"https://scikit-learn.org/stable/modules/model_evaluation.html#accuracy-score\">https://scikit-learn.org/stable/modules/model_evaluation.html#accuracy-score</a> [Stand: 27.05.2021]</I><br/>\n",
     "<I><a href=\"https://www.saracus.com/blog/performance-metriken-klassifikation-2-2/\">https://www.saracus.com/blog/performance-metriken-klassifikation-2-2/</a> [Stand: 27.05.2021]</I><br/>\n",
     "<I><a href=\"https://www.youtube.com/watch?v=Y10GEI1NKgA\">https://www.youtube.com/watch?v=Y10GEI1NKgA</a> [Stand: 27.05.2021]</I><br/>\n",
@@ -695,6 +688,13 @@
     "<I><a href=\"https://seaborn.pydata.org/generated/seaborn.heatmap.html\">https://seaborn.pydata.org/generated/seaborn.heatmap.html</a> [Stand: 27.05.2021]</I><br/>\n",
     "<I><a href=\"https://datamines.de/konfusionsmatrix\">https://datamines.de/konfusionsmatrix</a> [Stand: 27.05.2021]</I><br/>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
